--- a/client-app/package.json
+++ b/client-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microsoft/signalr": "^6.0.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
@@ -18,8 +19,10 @@
     "mobx-react-lite": "^3.1.6",
     "react": "^17.0.1",
     "react-calendar": "^3.2.1",
+    "react-cropper": "^2.1.8",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
